--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/general.css" />
     <title>Omnifood-project</title>
   </head>
   <body>
@@ -62,6 +63,76 @@
               src="img/hero.png"
               alt="woman enjoying some food"
               class="hero-img"
+            />
+          </div>
+        </div>
+      </section>
+
+      <section class="section-how">
+        <div class="container">
+          <span class="subheading">How It Is Work</span>
+          <h2 class="secondary-heading">
+            Your daily dose of health in 3 simple steps
+          </h2>
+        </div>
+
+        <div class="container grid grid--2-cols grid--center-v">
+          <!-- Step-01 -->
+          <div class="step-text-box">
+            <p class="step-number">01</p>
+            <h2 class="tertiary-heading">
+              Tell us what you like (and what not)
+            </h2>
+            <p class="step-description">
+              Never again waste time thinking about what to eat! Omnifood AI
+              will create a 100% personalized weekly meal plan just for you. It
+              makes sure you get all the nutrients and vitamins you need, no
+              matter what diet you follow!
+            </p>
+          </div>
+
+          <div class="step-img-box">
+            <img
+              src="img/app/app-screen-1.png"
+              alt="iphone image"
+              class="step-img"
+            />
+          </div>
+
+          <!-- Step-02 -->
+          <div class="step-img-box">
+            <img
+              src="img/app/app-screen-2.png"
+              alt="iphone image"
+              class="step-img"
+            />
+          </div>
+          <div class="step-text-box">
+            <p class="step-number">02</p>
+            <h2 class="tertiary-heading">Approve your weekly meal plan</h2>
+            <p class="step-description">
+              Once per week, approve the meal plan generated for you by Omnifood
+              AI. You can change ingredients, swap entire meals, or even add
+              your own recipes.
+            </p>
+          </div>
+
+          <!-- Step-03 -->
+
+          <div class="step-text-box">
+            <p class="step-number">03</p>
+            <h2 class="tertiary-heading">Receive meals at convenient time</h2>
+            <p class="step-description">
+              Best chefs in town will cook your selected meal every day, and we
+              will deliver it to your door whenever works best for you. You can
+              change delivery schedule and address daily!
+            </p>
+          </div>
+          <div class="step-img-box">
+            <img
+              src="img/app/app-screen-3.png"
+              alt="iphone image"
+              class="step-img"
             />
           </div>
         </div>
