--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <title>Omnifood-project</title>
   </head>
   <body>
-    <header class="header nav-open">
+    <!-- nav-open -->
+    <header class="header">
       <a href="#">
         <img src="img/omnifood-logo.png" alt="omnifood logo" class="logo" />
       </a>
